@@ -313,8 +313,6 @@ public class FileDrop
                             // Get a useful list
                             java.util.List fileList = (java.util.List) 
                                 tr.getTransferData(java.awt.datatransfer.DataFlavor.javaFileListFlavor);
-                            @SuppressWarnings("unused")
-							java.util.Iterator iterator = fileList.iterator();
 
                             // Convert list to array
                             java.io.File[] filesTemp = new java.io.File[ fileList.size() ];
@@ -424,14 +422,14 @@ public class FileDrop
         {   
             boolean support = false;
             try
-            {   @SuppressWarnings("unused")
-			Class arbitraryDndClass = Class.forName( "java.awt.dnd.DnDConstants" );
+            {   
+			    Class.forName( "java.awt.dnd.DnDConstants" );
                 support = true;
             }   // end try
             catch( Exception e )
             {   support = false;
             }   // end catch
-            supportsDnD = new Boolean( support );
+            supportsDnD = Boolean.valueOf(support );
         }   // end if: first time through
         return supportsDnD.booleanValue();
     }   // end supportsDnD
